# medz-extractor

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_or_docs.yml  parsing_issue.yml
.github/workflows/: ci.yml  process.yml  release.yml
docs/: PRD.md  SPECS.md
input/: 2024-12.xlsx  2025-05.xlsx  2025-10.xlsx  2025-12.xlsx  2026-04.xlsx
output/2024-08/: nomenclature.csv  non_renouveles.csv
output/2025-03/: nomenclature.csv  non_renouveles.csv  retraits.csv
output/2025-05/: nomenclature.csv  non_renouveles.csv  retraits.csv
output/2025-07/: nomenclature.csv  non_renouveles.csv  retraits.csv
output/2025-09/: nomenclature.csv  non_renouveles.csv  retraits.csv
output/2025-10/: retraits.csv
output/2025-11/: nomenclature.csv  non_renouveles.csv  retraits.csv
output/2026-02/: nomenclature.csv  non_renouveles.csv  retraits.csv
output/2026-04/: nomenclature.csv  non_renouveles.csv  retraits.csv
scripts/: __init__.py  extract_medz.py
src/medz_extractor/: __init__.py  cli.py  parser.py  schema.py  sheet_detector.py  writer.py
tests/: test_cli_logging.py  test_e2e.py  test_extract_medz_pipeline.py  test_golden_validation.py  test_parser.py  test_regression.py  test_schema.py  test_sheet_detector.py  test_writer.py
tests/fixtures/: 2024-08.xlsx  2025-03.xlsx  2025-09.xlsx  2025-11.xlsx  README.md
tests/golden/2024-08/: retraits.csv
tests/golden/2024-12/: nomenclature.csv  non_renouveles.csv  retraits.csv
tests/golden/2025-03/: nomenclature.csv  (+2 more)
(+17 files in other folders)
