[project]
name = "medz-extractor"
version = "0.1.0"
description = "a deterministic, open-source tool that converts official Algerian pharmaceutical nomenclature Excel reports into clean, structured CSV datasets for reproducible data workflows."
requires-python = ">=3.14"
dependencies = [
  "typer>=0.23",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4",
  "pytest-cov>=7.0",
]

[project.scripts]
medz-extractor = "medz_extractor.cli:app"

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["medz_extractor"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
